[package]
name = "xen-vhost-master"
version = "0.1.0"
authors = ["Viresh Kumar <viresh.kumar@linaro.org>"]
description = "Xen vhost user master"
license = "Apache-2.0 OR BSD-3-Clause"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
epoll = "4.3.1"
seccompiler = "0.2.0"
thiserror = "1.0"
log = "0.4.14"
libc = "0.2.118"
vhost = { version = "0.3", features = ["vhost-user-master", "vhost-kern", "vhost-user-slave"] }
virtio-queue = "0.2"
vm-memory = { version = "0.7.0", features = ["backend-mmap", "backend-atomic", "backend-bitmap"] }
vmm-sys-util = "0.9.0"
virtio-bindings = { version = "0.1.0", features = ["virtio-v5_0_0"] }
vhost-user-backend = "0.2"
virtio-disk = { git = "https://github.com/vireshk/virtio-disk" }
